<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>gate</artifactId>
		<groupId>com.elend</groupId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath>..</relativePath>
	</parent>
	<artifactId>gate-admin-web</artifactId>
	<packaging>war</packaging>
	<name>gate-admin-web</name>
	<description>gate支付网关管理后台</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<finalName>gate-admin-web</finalName>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<source>1.7</source>
						<target>1.7</target>
						<meminitial>128m</meminitial>
						<maxmem>512m</maxmem>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<!-- <version>2.4</version> -->
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.2</version>
					<configuration>
						<warSourceExcludes>
							**/test/**
						</warSourceExcludes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>maven-jetty-plugin</artifactId>
					<version>6.1.11</version>
					<configuration>
						<contextPath>/</contextPath>
						<systemProperties>
							<systemProperty>
								<name>MAVEN_OPTS</name>
								<value>"-Xms512m -Xmx1024m -XX:MaxPermSize=384m"</value>
							</systemProperty>
							<systemProperty>
								<name>JVM-ARG</name>
								<value>"-XX:MaxPermSize=386m"</value>
							</systemProperty>
							<systemProperty>
								<name>JAVA_OPTS</name>
								<value>"-Xms512m -Xmx1024m"</value>
							</systemProperty>
							<!-- <jvm-arg>-XX:MaxPermSize=256m</jvm-arg> -->
						</systemProperties>
					</configuration>
				</plugin>
			</plugins>

		</pluginManagement>
	</build>
	<dependencies>
		<dependency>
			<groupId>net.sf.log4jdbc</groupId>
			<artifactId>log4jdbc3</artifactId>
			<version>1.2.1</version>
		</dependency>
		<dependency>
			<groupId>com.elend</groupId>
			<artifactId>p2p-euc</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.elend</groupId>
			<artifactId>p2p-util</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>com.elend</groupId>
			<artifactId>gate-order</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.6.12</version>
		</dependency>
		<dependency>
			<groupId>com.elend</groupId>
			<artifactId>gate-notify</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.elend</groupId>
			<artifactId>p2p-sdk</artifactId>
			<version>1.0.5</version>
		</dependency>
	</dependencies>
</project>